--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,40 @@
     <string name="scan_dokumen">Scan Dokumen</string>
     <string name="logout">Logout</string>
     <string name="description_scan">Silahkan lakukan pemindaian dokumen berupa Kartu Tanda Penduduk (KTP).</string>
+    <string name="ktp">Kartu Tanda Penduduk!</string>
+    <string name="preview_gambar_ktp">Preview gambar KTP</string>
+    <string name="open_camera">Buka Camera</string>
+    <string name="open_gallery">Buka Galeri</string>
+    <string name="scan_ktp">Scan KTP</string>
+    <string name="hasil_scan_ktp">Hasil Scan KTP</string>
+    <string name="nik">NIK</string>
+    <string name="nama">Nama</string>
+    <string name="tempat_lahir">Tempat Lahir</string>
+    <string name="tanggal_lahir">Tanggal Lahir</string>
+    <string name="jenis_kelamin">Jenis Kelamin</string>
+    <string name="alamat">Alamat</string>
+    <string name="rt">RT</string>
+    <string name="rw">RW</string>
+    <string name="kel_desa">Kel/Desa</string>
+    <string name="kecamatan">Kecamatan</string>
+    <string name="agama">Agama</string>
+    <string name="status_perkawinan">Status Perkawinan</string>
+    <string name="pekerjaan">Pekerjaan</string>
+    <string name="kewarganegaraan">Kewarganegaraan</string>
+    <string name="gol_darah">Gol. Darah</string>
+    <string name="save">Simpan</string>
+    <string name="kartu_keluarga">Kartu Keluarga!</string>
+    <string name="preview_gambar_kk">Preview gambar KK</string>
+    <string name="desc_kk">Silahkan lakukan pemindaian dokumen berupa Kartu Keluarga (KK).</string>
+    <string name="scan_kk">Scan Kartu Keluarga\n</string>
+    <string name="hasil_scan_kk">Hasil Scan Kartu Keluarga</string>
+    <string name="nama_ayah">Nama Ayah</string>
+    <string name="nama_ibu">Nama Ibu</string>
+    <string name="hubungan_keluarga">Hubungan dalam Keluarga</string>
+    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
+    <string name="narahubung_warga">Narahubung Warga</string>
+    <string name="permission_granted">Permission granted</string>
+    <string name="permission_denied">Permission denied</string>
+    <string name="capture_gambar">Capture gambar</string>
+    <string name="empty_image_warning">Silahkan mmasukkan gambar KTP terlebih dahulu.</string>
 </resources>
